fix: align loader

--- a/src/app/shared/components/loader/loader.component.scss
+++ b/src/app/shared/components/loader/loader.component.scss
@@ -2,24 +2,23 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
   display: flex;
   align-items: flex-end;
-  justify-content: flex-end;
-  margin-left: 1em;
+  justify-content: center;
   z-index: 999;
 }
 
 .loader {
   padding: 10px;
   display: flex;
-  gap: 5px;
+  gap: 3px;
 }
 
 .loader .bar {
-  width: 2px;
+  width: 3px;
   height: 50px;
   background-color: var(--main-color);
   animation: wave 1.5s infinite ease-in-out;
